Avoids overflowing text from code blocks

--- a/themes/ropensci/static/css/code.pcss
+++ b/themes/ropensci/static/css/code.pcss
@@ -15,9 +15,16 @@ pre {
     background-color: #2b303b;
     padding: 1rem;
     margin-bottom: 2.65rem;
+    overflow-x: scroll;
     & code {
         background-color: #2b303b;
     }
+}
+
+h2 code {
+    font-size: 3em;
+    line-height: 1em;
+    margin-bottom: 1.65rem;
 }
 
 .hljs-comment, 
