--- a/themes/ropensci/static/css/style-new.css
+++ b/themes/ropensci/static/css/style-new.css
@@ -1127,9 +1127,14 @@ q:before, q:after {
 }pre {
     background-color: #2b303b;
     padding: 1rem;
-    margin-bottom: 2.65rem
+    margin-bottom: 2.65rem;
+    overflow-x: scroll
 }pre code{
   background-color: #2b303b;
+}h2 code {
+    font-size: 3em;
+    line-height: 1em;
+    margin-bottom: 1.65rem;
 }.hljs-comment, 
 .hljs-quote {
     color:#65737e
